loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:1: error: too many arguments for method estChoisie: ()Boolean
estChoisie(1) 
          ^